--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <h2>Enter Classroom</h2>
       <div class="container">
         <h1 style="text-align:center;">Student Room</h1>
-        <a href="new.html">
+        <a href="https://classroom-web.onrender.com/">
           <button class="btn btn-primary btn-lg">Click</button>
         </a>
       </div>
